--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ tittle: princealieli Tech
 #logo
 description: Content creator
 #show_downloads: true
-theme: jeky11-theme-minimal
+theme: bbidulock/xde-theme 
