--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 tittle: princealieli Tech
-#logo
+logo: Docs/assets/FB_IMG_17419734649566924.jpg
 description: Content creator
 #show_downloads: true
 theme: jekyll-theme-minimal
